force-app/main/default/objects/Opportunity/fields/CMnumber__c.field-meta.xml
<CustomField>
    <fullName>CMnumber__c</fullName>
    <label>CM number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>