force-app/main/default/objects/Opportunity/fields/CustomerAgent__c.field-meta.xml
<CustomField>
    <fullName>CustomerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Agent</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>