force-app/main/default/objects/Opportunity/fields/Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>Notification_Number__c</fullName>
    <externalId>true</externalId>
    <label>Notification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>