force-app/main/default/objects/Opportunity/fields/Required_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_End_Date__c</fullName>
    <label>Required End Date</label>
    <type>DateTime</type>
</CustomField>