force-app/main/default/objects/Opportunity/fields/System_Status__c.field-meta.xml
<CustomField>
    <fullName>System_Status__c</fullName>
    <label>System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>